testsuite/tests/roles/should_fail/RolesIArray.stderr
RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘Data.Array.Base.unsafeAccumArray’
      When trying to solve the quantified constraint
        forall i e'.
        Ix i =>
        (Coercible
           ((Word64 -> e' -> Word64)
            -> Word64 -> (i, i) -> [(Int, e')] -> UArray i Word64)
           ((N -> e' -> N) -> N -> (i, i) -> [(Int, e')] -> UArray i N),
         Ix i)
        arising from the coercion of derived method ‘Data.Array.Base.unsafeAccumArray’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘Data.Array.Base.unsafeAccum’
      When trying to solve the quantified constraint
        forall i e'.
        Ix i =>
        (Coercible
           ((Word64 -> e' -> Word64)
            -> UArray i Word64 -> [(Int, e')] -> UArray i Word64)
           ((N -> e' -> N) -> UArray i N -> [(Int, e')] -> UArray i N),
         Ix i)
        arising from the coercion of derived method ‘Data.Array.Base.unsafeAccum’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘Data.Array.Base.unsafeReplace’
      When trying to solve the quantified constraint
        forall i.
        Ix i =>
        (Coercible
           (UArray i Word64 -> [(Int, Word64)] -> UArray i Word64)
           (UArray i N -> [(Int, N)] -> UArray i N),
         Ix i)
        arising from the coercion of derived method ‘Data.Array.Base.unsafeReplace’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘Data.Array.Base.unsafeAt’
      When trying to solve the quantified constraint
        forall i.
        Ix i =>
        (Coercible
           (UArray i Word64 -> Int -> Word64) (UArray i N -> Int -> N),
         Ix i)
        arising from the coercion of derived method ‘Data.Array.Base.unsafeAt’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘Data.Array.Base.unsafeArray’
      When trying to solve the quantified constraint
        forall i.
        Ix i =>
        (Coercible
           ((i, i) -> [(Int, Word64)] -> UArray i Word64)
           ((i, i) -> [(Int, N)] -> UArray i N),
         Ix i)
        arising from the coercion of derived method ‘Data.Array.Base.unsafeArray’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘Data.Array.Base.numElements’
      When trying to solve the quantified constraint
        forall i.
        Ix i =>
        (Coercible (UArray i Word64 -> Int) (UArray i N -> Int), Ix i)
        arising from the coercion of derived method ‘Data.Array.Base.numElements’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

RolesIArray.hs:10:13: error: [GHC-18872]
    • Couldn't match type ‘Word64’ with ‘N’
        arising (via a quantified constraint) from
          the coercion of derived method ‘bounds’
      When trying to solve the quantified constraint
        forall i.
        Ix i =>
        (Coercible (UArray i Word64 -> (i, i)) (UArray i N -> (i, i)),
         Ix i)
        arising from the coercion of derived method ‘bounds’
      Note: The type constructor ‘UArray’ has nominal role in its second argument.
    • When deriving the instance for (IArray UArray N)

